--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: jsopa
+          ref: ${{ github.ref }}
       - name: 'Check out `node_modules`'
         uses: actions/checkout@v3
         with:
