--- a/.github/workflows/tmp-kotlin-test.yml
+++ b/.github/workflows/tmp-kotlin-test.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Build the container
         run:  docker build .
+      - name: Generate golden results
+        run: ./scripts/gen_all_goldens.sh
       - name: Generate Kotlin code and tests
         run: scripts/gen_all_kt_code_and_tests.sh
       - name: Run Kotlin tests
