Trigger the build of an Asbyrgi container.

--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -2,6 +2,8 @@ name: Build the Asbyrgi container
 
 on:
   workflow_dispatch:
+  # TEMPORARY!
+  push:
 
 env:
   GHCR_USERNAME: ${{ github.actor }}
