--- a/.github/workflows/tests-js.yml
+++ b/.github/workflows/tests-js.yml
@@ -1,6 +1,9 @@
 name: JavaScript Transpilation Tests
 
-on: [push]
+on:
+  workflow_dispatch:
+  pull_request:
+    types: [opened, synchronize]
 
 jobs:
   run-tests-js:
