--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -1,4 +1,4 @@
-name: Build the Asbyrgi container
+name: Build the Asbyrgi container (only run as `dkorolev`, not `C5T`!)
 
 on:
   workflow_dispatch:
