--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -26,7 +26,7 @@ jobs:
           docker build -t "ghcr.io/${GHCR_USERNAME}/asbyrgi:latest" .
       - name: Test Version
         run: |
-          echo asbyrgi_version | docker run -t "ghcr.io/${GHCR_USERNAME}/asbyrgi:latest"
+          docker run -i "ghcr.io/${GHCR_USERNAME}/asbyrgi:latest" asbyrgi_version
       - name: Login to GHCR
         run: echo "${GHCR_PASSWORD}" | docker login ghcr.io --username "${GHCR_USERNAME}" --password-stdin
       - name: Push to GHCR
