--- a/.github/workflows/tests-kotlin.yml
+++ b/.github/workflows/tests-kotlin.yml
@@ -13,7 +13,18 @@ jobs:
         uses: actions/checkout@v3
       - name: Build the container
         run:  docker build .
+      - name: Build container
+        id: asbyrgi_container
+        run: |
+          docker build .
+          echo ::set-output name=ASBYRGI_CONTAINER_ID::$(docker build -q .)
+      - name: Generate goldens
+        run: |
+          export ASBYRGI_CONTAINER_ID=${{ steps.asbyrgi_container.outputs.ASBYRGI_CONTAINER_ID }}
+          scripts/gen_all_goldens.sh
       - name: Generate Kotlin code and tests
-        run: scripts/gen_all_kt_code_and_tests.sh
+        run: |
+          export ASBYRGI_CONTAINER_ID=${{ steps.asbyrgi_container.outputs.ASBYRGI_CONTAINER_ID }}
+          scripts/gen_all_kt_code_and_tests.sh
       - name: Run Kotlin tests
         run: docker run -v "$PWD/kt_test":/kt_test $(docker build -q .) ktRunTests
